<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_alarm" android:icon="@drawable/ic_nav_alarm" android:title="@string/nav_alarm" />
    <item android:id="@+id/nav_world" android:icon="@drawable/ic_nav_globe" android:title="@string/nav_world" />
    <item android:id="@+id/nav_stopwatch" android:icon="@drawable/ic_nav_stopwatch" android:title="@string/nav_stopwatch" />
    <item android:id="@+id/nav_timer" android:icon="@drawable/ic_nav_timer" android:title="@string/nav_timer" />
    <item android:id="@+id/nav_gallery" android:icon="@drawable/ic_nav_gallery" android:title="@string/nav_gallery" />
    <item android:id="@+id/nav_settings" android:icon="@drawable/ic_nav_settings" android:title="@string/nav_settings" />
</menu>
