<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_app_lock"
        android:icon="@drawable/ic_menu_lock"
        android:title="App lock"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_calendar"
        android:icon="@drawable/ic_menu_calendar"
        android:title="@string/menu_calendar"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_google"
        android:icon="@drawable/ic_menu_google"
        android:title="@string/menu_google"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_history"
        android:icon="@drawable/ic_menu_history"
        android:title="@string/menu_history"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_screensaver"
        android:icon="@drawable/ic_help_outline"
        android:title="@string/menu_screensaver"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_privacy"
        android:icon="@drawable/ic_menu_lock"
        android:title="@string/menu_privacy"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_guide"
        android:icon="@drawable/ic_help_outline"
        android:title="@string/menu_guide"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_version"
        android:icon="@drawable/ic_menu_info"
        android:title="@string/menu_version"
        app:showAsAction="never" />
</menu>
